--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,7 +1,28 @@
-fastapi
-uvicorn
-typing
-pydantic
-pydantic_settings
-sqlalchemy
-oracledb
+annotated-types==0.7.0
+anyio==4.6.2.post1
+cached-property==1.5.2
+cffi==1.17.1
+click==8.1.7
+colorama==0.4.6
+cryptography==43.0.3
+fastapi==0.115.3
+greenlet==3.1.1
+h11==0.14.0
+idna==3.10
+inflection==0.5.1
+mypy-extensions==1.0.0
+oracledb==2.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.6.0
+pydantic_core==2.23.4
+python-dotenv==1.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+sqlalchemy-orm==1.2.10
+sqlmodel==0.0.22
+starlette==0.41.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+uuid==1.30
+uvicorn==0.32.0
